Change visibility to show nodes when checked #117
* Rename the dropdown label to Node Visibility
* Change the behavior to show the nodes when their status is checked

Signed-off-by: Jillian Daguil <jdaguil@nexb.com>

--- a/index.html
+++ b/index.html
@@ -133,14 +133,14 @@
                     <!-- Node status toggle -->
                     <div class="dropdown component-status-dropdown">
                         <button class="btn btn-default dropdown-toggle" type="button" id="nodeStatusDropDown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                            Hide Nodes
+                            Node Visibility
                             <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu status-dropdown-menu dropdown-menu-left" aria-labelledby="nodeStatusDropDown">
-                            <li><a href="#" class="small" data-value="Analyzed" tabIndex="-1"><input type="checkbox"/>&nbsp; Analyzed</a></li>
-                            <li><a href="#" class="small" data-value="Attention" tabIndex="-1"><input type="checkbox"/>&nbsp; Attention</a></li>
-                            <li><a href="#" class="small" data-value="Original" tabIndex="-1"><input type="checkbox"/>&nbsp; Original</a></li>
-                            <li><a href="#" class="small" data-value="NR" tabIndex="-1"><input type="checkbox"/>&nbsp; NR</a></li>
+                            <li><a href="#" class="small" data-value="Analyzed" tabIndex="-1"><input type="checkbox" checked/>&nbsp; Analyzed</a></li>
+                            <li><a href="#" class="small" data-value="Attention" tabIndex="-1"><input type="checkbox" checked/>&nbsp; Attention</a></li>
+                            <li><a href="#" class="small" data-value="Original" tabIndex="-1"><input type="checkbox" checked/>&nbsp; Original</a></li>
+                            <li><a href="#" class="small" data-value="NR" tabIndex="-1"><input type="checkbox" checked/>&nbsp; NR</a></li>
                         </ul>
                     </div>
                 </div>
