Update sidebar menu css when selected #4
* Add .btn-change.selected css for when sidebar menu is currently selected
* Fix node view to only redraw when there is a currentId
* Fix chart summary files_count error

Signed-off-by: Jillian Daguil <jdaguil@nexb.com>

--- a/index.html
+++ b/index.html
@@ -72,22 +72,22 @@
                 </button>
             </li>
             <li>
-                <button class="btn btn-sidebar" id="show-bar-chart" data-toggle="tooltip" data-placement="right" title="Chart Summary View">
+                <button class="btn btn-sidebar btn-change" id="show-bar-chart" data-toggle="tooltip" data-placement="right" title="Chart Summary View">
                     <i class="fa fa-bar-chart" aria-hidden="true"></i>
                 </button>
             </li>
             <li>
-                <button class="btn btn-sidebar" id="show-clue-table" data-toggle="tooltip" title="Table View">
+                <button class="btn btn-sidebar btn-change" id="show-clue-table" data-toggle="tooltip" title="Table View">
                     <i class="fa fa-table" aria-hidden="true"></i>
                 </button>
             </li>
             <li>
-                <button class="btn btn-sidebar" id="show-tree" data-toggle="tooltip" title="Node View">
+                <button class="btn btn-sidebar btn-change" id="show-tree" data-toggle="tooltip" title="Node View">
                     <i class="fa fa-code-fork" aria-hidden="true"></i>
                 </button>
             </li>
             <li>
-                <button class="btn btn-sidebar" id="show-component-table" data-toggle="modal" data-placement="right" title="Component Summary View">
+                <button class="btn btn-sidebar btn-change" id="show-component-table" data-toggle="modal" data-placement="right" title="Component Summary View">
                     <i class="fa fa-list-ol" aria-hidden="true"></i>
                 </button>
             </li>
