--- a/index.html
+++ b/index.html
@@ -19,13 +19,15 @@
     <link rel="stylesheet" href="assets/DataTables/Select-1.1.2/css/select.bootstrap.css"/>
     <link rel="stylesheet" href="assets/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="assets/css/select2.css"/>
-    <link rel="stylesheet" href="assets/css/simple-sidebar.css">
+    <link rel="stylesheet" href="assets/css/simple-sidebar.css"/>
+    <link rel="stylesheet" href="assets/css/c3.min.css"/>
     <link rel="stylesheet" href="assets/css/main.css"/>
 
     <!--jQuery needs to be first -->
     <script src="assets/js/jquery-2.1.3.min.js"></script>
     <script src="assets/js/jquery-ui.js"></script>
     <script src="assets/js/d3.js" onload="d3 = module.exports;"></script>
+    <script src="assets/js/c3.min.js"></script>
     <script src="assets/DataTables/Bootstrap-3.3.6/js/bootstrap.js"></script>
     <script src="assets/DataTables/JSZip-2.5.0/jszip.js"></script>
     <script src="assets/DataTables/pdfmake-0.1.18/build/pdfmake.js"></script>
@@ -155,6 +157,48 @@
                             <div class="header">
                                 <h3 class="title">0</h3>
                                 <p class="category">Packages Detected</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-3 col-sm-6 col-xs-12">
+                        <div class="card">
+                            <div class="content">
+                                <div id="source-chart"></div>
+                            </div>
+                            <div class="header">
+                                <p class="category">Programming Languages</p>
+                            </div>
+                        </div>
+                    </div>
+                     <div class="col-lg-3 col-sm-6 col-xs-12">
+                        <div class="card">
+                            <div class="content">
+                                <div id="license-category-chart"></div>
+                            </div>
+                            <div class="header">
+                                <p class="category">License Categories</p>
+                            </div>
+                        </div>
+                    </div>
+                     <div class="col-lg-3 col-sm-6 col-xs-12">
+                        <div class="card">
+                            <div class="content">
+                                <div id="license-key-chart"></div>
+                            </div>
+                            <div class="header">
+                                <p class="category">License Keys</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-sm-6 col-xs-12">
+                        <div class="card">
+                            <div class="content">
+                                <div id="packages-type-chart"></div>
+                            </div>
+                            <div class="header">
+                                <p class="category">Package Types</p>
                             </div>
                         </div>
                     </div>
