Update wiki help links :memo:
Signed-off-by: Jillian Daguil <jdaguil@nexb.com>

--- a/index.html
+++ b/index.html
@@ -375,14 +375,14 @@
                     </p>
                     <h3>Basics</h3>
                     <ul>
-                        <li><a class="open-in-default" href="https://github.com/nexB/aboutcode-manager/wiki/Building">Building</a></li>
                         <li><a class="open-in-default" href="https://github.com/nexB/aboutcode-manager/wiki/AboutCode-Manager-Views">AboutCode Manager Views</a></li>
+                        <li><a class="open-in-default" href="https://github.com/nexB/aboutcode-manager/wiki/Building">Building</a></li>
                         <li><a class="open-in-default" href="https://github.com/nexB/aboutcode-manager/wiki/Platform-Support">Platform Support</a></li>
                     </ul>
                     <h3>Tutorials</h3>
                     <ul>
-                        <li><a class="open-in-default" href="https://github.com/nexB/aboutcode-manager/wiki/Import-JSON-%26-Export-JSON">Import JSON & Export JSON</a></li>
-                        <li><a class="open-in-default" href="https://github.com/nexB/aboutcode-manager/wiki/Open-%26-Save-a-SQLite-File">Open & Save a SQLite File</a></li>
+                        <li><a class="open-in-default" href="https://github.com/nexB/aboutcode-manager/wiki/Import-JSON-and-Export-JSON">Import JSON and Export JSON</a></li>
+                        <li><a class="open-in-default" href="https://github.com/nexB/aboutcode-manager/wiki/Open-and-Save-a-SQLite-File">Open and Save a SQLite File</a></li>
                         <li><a class="open-in-default" href="https://github.com/nexB/aboutcode-manager/wiki/Creating-Components">Creating Components</a></li>
                         <li><a class="open-in-default" href="https://github.com/nexB/aboutcode-manager/wiki/Navigating-the-Chart-Summary-View">Navigating the Chart Summary View</a></li>
                         <li><a class="open-in-default" href="https://github.com/nexB/aboutcode-manager/wiki/Navigating-the-Node-View">Navigating the Node View</a></li>
