--- a/index.html
+++ b/index.html
@@ -253,18 +253,18 @@
     <div id="db-indicator"></div>
 
     <!-- Node View Modal -->
-    <div class="modal fade action-create" id="nodeModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal fade action-create" id="componentDialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h3 class="modal-title" id="nodeModalLabel">Modal title</h3>
+                    <h3 class="modal-title">Modal title</h3>
                 </div>
                 <div class="modal-body">
                     <form>
                         <fieldset class="form-group">
-                            <label for="select-status">Status</label>
-                            <select class="form-control" id="select-status" type="text">
+                            <label for="component-status">Status</label>
+                            <select class="form-control status" id="component-status" type="text">
                                 <option value="Analyzed">Analyzed</option>
                                 <option value="Attention">Needs Attention</option>
                                 <option value="Original">Original Code</option>
@@ -280,23 +280,23 @@
                             <input type="text" class="form-control" id="component-version" placeholder="Enter version">
                         </fieldset>
                         <fieldset class="form-group">
-                            <label>License</label>
-                            <select data-hide-on-select="true" class="form-control " id="select-license" type="text"></select>
+                            <label for="component-license">License</label>
+                            <select data-hide-on-select="true" class="form-control " id="component-license" type="text"></select>
                         </fieldset>
                         <fieldset class="form-group">
-                            <label>Owner</label>
-                            <select data-hide-on-select="true" class="form-control" id="select-owner" type="text"></select>
+                            <label for="component-owner">Owner</label>
+                            <select data-hide-on-select="true" class="form-control" id="component-owner" type="text"></select>
                         </fieldset>
                         <fieldset class="form-group">
-                            <label>Copyright</label>
-                            <select data-hide-on-select="true" class="form-control" id="select-copyright" type="text"></select>
+                            <label for="component-copyright">Copyright</label>
+                            <select data-hide-on-select="true" class="form-control" id="component-copyright" type="text"></select>
                         </fieldset>
                          <fieldset class="form-group">
-                            <label>Programming Language</label>
-                            <select data-hide-on-select="true" class="form-control" id="select-language" type="text"></select>
+                            <label for="component-language">Programming Language</label>
+                            <select data-hide-on-select="true" class="form-control" id="component-language" type="text"></select>
                         </fieldset>
                          <fieldset class="form-group">
-                            <label>Homepage URL</label>
+                            <label for="component-homepage-url">Homepage URL</label>
                             <select data-hide-on-select="true" class="form-control" id="component-homepage-url" type="text"></select>
                         </fieldset>
                         <fieldset class="form-group">
@@ -307,8 +307,8 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-danger" data-dismiss="modal" id="delete-component">Delete Component</button>
-                    <button type="button" class="btn btn-primary" id="save-component">Save changes</button>
+                    <button type="button" class="btn btn-danger" data-dismiss="modal" id="component-delete">Delete Component</button>
+                    <button type="button" class="btn btn-primary" id="component-save">Save changes</button>
                 </div>
             </div>
         </div>
@@ -391,12 +391,13 @@
     </div>
 
     <script src="assets/app/js/export-to-dejacode.js"></script>
+    <script src="assets/app/js/aboutCodeDB.js"></script>
     <script src="assets/app/js/nodeview.js"></script>
+    <script src="assets/app/js/componentDialog.js"></script>
     <script src="assets/app/js/barChart.js"></script>
     <script src="assets/app/js/aboutCodeBarChart.js"></script>
     <script src="assets/app/js/aboutCodeDashboard.js"></script>
     <script src="assets/thirdparty/js/jstree.min.js"></script>
-    <script src="assets/app/js/aboutCodeDB.js"></script>
     <script src="assets/app/js/aboutCodeNodeView.js"></script>
     <script src="assets/app/js/aboutCodeDataTables.js"></script>
     <script src="assets/app/js/componentDataTables.js"></script>
