Refactor jstree into separate class #168
Signed-off-by: Jillian Daguil <jdaguil@nexb.com>

--- a/index.html
+++ b/index.html
@@ -395,6 +395,7 @@
     <script src="assets/app/js/nodeview.js"></script>
     <script src="assets/app/js/componentDialog.js"></script>
     <script src="assets/app/js/barChart.js"></script>
+    <script src="assets/app/js/aboutCodeJsTree.js"></script>
     <script src="assets/app/js/aboutCodeBarChart.js"></script>
     <script src="assets/app/js/aboutCodeDashboard.js"></script>
     <script src="assets/thirdparty/js/jstree.min.js"></script>
