--- a/index.html
+++ b/index.html
@@ -394,6 +394,7 @@
     <script src="assets/app/js/nodeview.js"></script>
     <script src="assets/app/js/componentDialog.js"></script>
     <script src="assets/app/js/dejacodeExportDialog.js"></script>
+    <script src="assets/app/js/splitter.js"></script>
     <script src="assets/app/js/barChart.js"></script>
     <script src="assets/app/js/aboutCodeJsTree.js"></script>
     <script src="assets/app/js/aboutCodeBarChart.js"></script>
