Add warning re unsaved Component edits #127
  * Connected the two close buttons ('Close' and 'X') to a new class
    method, '_closeComponent()'.
  * Defined attributes for the form's inputs etc. and populate them
    with any previously-saved values.
  * Disabled the ability to close the dialog by clicking outside the
    dialog or pressing the escape key.
  * '_closeComponent()' tests whether any of the previously-saved
    values has been changed without saving.

Signed-off-by: John M. Horan <johnmhoran@gmail.com>

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <button type="button" class="close" data-dismiss="modal" id="component-exit" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                     <h3 class="modal-title">Modal title</h3>
                 </div>
                 <div class="modal-body">
@@ -310,7 +310,7 @@
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal" id="component-close">Close</button>
                     <button type="button" class="btn btn-danger" data-dismiss="modal" id="component-delete">Delete Component</button>
                     <button type="button" class="btn btn-primary" id="component-save">Save changes</button>
                 </div>
