Refactor using serialization #127
Signed-off-by: John M. Horan <johnmhoran@gmail.com>

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                     <form>
                         <fieldset class="form-group">
                             <label for="component-status">Status</label>
-                            <select class="form-control status" id="component-status" type="text">
+                            <select class="form-control status" id="component-status" name="component-status" type="text">
                                 <option value="Analyzed">Analyzed</option>
                                 <option value="Attention">Needs Attention</option>
                                 <option value="Original">Original Code</option>
@@ -277,35 +277,35 @@
                         </fieldset>
                         <fieldset class="form-group">
                             <label for="component-name">Component</label>
-                            <input type="text" class="form-control" id="component-name" placeholder="Enter component">
+                            <input type="text" class="form-control" id="component-name" name="component-name" placeholder="Enter component">
                         </fieldset>
                         <fieldset class="form-group">
                             <label for="component-version">Version</label>
-                            <input type="text" class="form-control" id="component-version" placeholder="Enter version">
+                            <input type="text" class="form-control" id="component-version" name="component-version" placeholder="Enter version">
                         </fieldset>
                         <fieldset class="form-group">
                             <label for="component-license">License</label>
-                            <select data-hide-on-select="true" class="form-control " id="component-license" type="text"></select>
+                            <select data-hide-on-select="true" class="form-control " id="component-license" name="component-license" type="text"></select>
                         </fieldset>
                         <fieldset class="form-group">
                             <label for="component-owner">Owner</label>
-                            <select data-hide-on-select="true" class="form-control" id="component-owner" type="text"></select>
+                            <select data-hide-on-select="true" class="form-control" id="component-owner" name="component-owner" type="text"></select>
                         </fieldset>
                         <fieldset class="form-group">
                             <label for="component-copyright">Copyright</label>
-                            <select data-hide-on-select="true" class="form-control" id="component-copyright" type="text"></select>
+                            <select data-hide-on-select="true" class="form-control" id="component-copyright" name="component-copyright" type="text"></select>
                         </fieldset>
                          <fieldset class="form-group">
                             <label for="component-language">Programming Language</label>
-                            <select data-hide-on-select="true" class="form-control" id="component-language" type="text"></select>
+                            <select data-hide-on-select="true" class="form-control" id="component-language" name="component-language" type="text"></select>
                         </fieldset>
                          <fieldset class="form-group">
                             <label for="component-homepage-url">Homepage URL</label>
-                            <select data-hide-on-select="true" class="form-control" id="component-homepage-url" type="text"></select>
+                            <select data-hide-on-select="true" class="form-control" id="component-homepage-url" name="component-homepage-url" type="text"></select>
                         </fieldset>
                         <fieldset class="form-group">
                             <label for="component-notes">Notes</label>
-                            <textarea class="form-control" id="component-notes" rows="3"></textarea>
+                            <textarea class="form-control" id="component-notes" name="component-notes" rows="3"></textarea>
                         </fieldset>
                     </form>
                 </div>
