Show progress with completion percentage #205
* Add ProgressBar.js library
* Add new progress bar with completion percentage

Signed-off-by: Jillian Daguil <jdaguil@nexb.com>

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     <script src="assets/thirdparty/DataTables/Select-1.1.2/js/dataTables.select.js"></script>
     <script src="assets/thirdparty/js/scrollResize.js"></script>
     <script src="assets/thirdparty/js/jstree.min.js"></script>
+    <script src="assets/thirdparty/js/progressbar.min.js"></script>
 </head>
 <body>
     <!-- Sidebar -->
